# skakspil

./: .gitignore  CMakeLists.txt  README.md  cmakelists.txt
game logic/: Game.h  board.cpp  board.h  game.cpp  move.h  piece.h  rules.cpp  rules.h
game logic/Rules/: rules.h  rules_bishop.cpp  rules_common.cpp  rules_king.cpp  rules_pawn.cpp  rules_queen.cpp  rules_rook.cpp
src/: board.cpp  game.cpp  main.cpp  move.cpp  perft.cpp  rules.cpp
src/include/: board.h  fen.h  game.h  move.h  perft.h  rules.h
src/piece_rules/: rules_bishop.cpp  rules_king.cpp  rules_knight.cpp  rules_pawn.cpp
src/utils/: fen.cpp  perft.cpp
tests/: CMakeLists.txt  ep_test.cpp  fen_test.cpp  load_pos_test.cpp  test_moves.cpp  test_perft.cpp
